--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -5,14 +5,17 @@
 <PageTitle>Weather forecast</PageTitle>
 
 <MudText Typo="Typo.h3" GutterBottom="true">Weather forecast</MudText>
-<MudText Class="mb-8">This component demonstrates fetching data from the server.</MudText>
-@if (forecasts == null)
+<MudText Class="mb-8">This component demonstrates fetching data from theasd server.</MudText>
+@if (@forecasts == null)
 {
     <MudProgressCircular Color="Color.Default" Indeterminate="true" />
 }
 else
 {
-    <MudTable Items="forecasts" Hover="true" SortLabel="Sort By" Elevation="0">
+    <MudTable Items="@forecasts" Hover="true" SortLabel="Sort By" Elevation="2" Class="rounded-lg">
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Weather Forecasts</MudText>
+        </ToolBarContent>
         <HeaderContent>
             <MudTh>
                 <MudTableSortLabel InitialDirection="SortDirection.Ascending"
@@ -45,8 +48,9 @@ else
 }
 
 
+
 @code {
-    private WeatherForecast[] forecasts;
+    private WeatherForecast[]? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
@@ -58,7 +62,7 @@ else
 
         public int TemperatureC { get; set; }
 
-        public string Summary { get; set; }
+        public string Summary { get; set; } = "";
 
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
