Added a custom table consumed by PassengerTable

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -14,7 +14,7 @@
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit"
             Link="https://github.com/MudBlazor/MudBlazor/" Target="_blank" />
     </MudAppBar>
-    <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
+    <MudDrawer @bind-Open="_drawerOpen" Variant="@DrawerVariant.Temporary" Elevation="1">
         <MudDrawerHeader>
             <MudText Typo="Typo.h6">BlazoredAirlinesDemo</MudText>
         </MudDrawerHeader>
