--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -2,4 +2,6 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="/fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
+    <MudNavLink Href="/passengers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Passengers
+    </MudNavLink>
 </MudNavMenu>
