--- a/Components/Table.razor
+++ b/Components/Table.razor
@@ -22,6 +22,12 @@
 
         <MudSpacer />
 
+        @if (!@Readonly)
+        {
+            <MudIconButton Icon="@Icons.Filled.Add" Color="Color.Primary" aria-label="create" OnClick="_onCreate">
+            </MudIconButton>
+        }
+
         <MudIconButton Icon="@Icons.Filled.Refresh" Color="Color.Primary" aria-label="refresh" OnClick="Refresh">
         </MudIconButton>
 
@@ -80,6 +86,9 @@
     [Parameter]
     public RenderFragment ColumnGroup { get; set; }
 
+    [Parameter]
+    public bool Readonly { get; set; }
+
     public async Task<TableData<TEntity>> LoadData(TableState state)
     {
         return await HttpClient.Paginate(state);
@@ -92,6 +101,15 @@
     {
         table.ReloadServerData();
     }
+
+    private void _onCreate()
+    {
+        OnCreate.InvokeAsync(0);
+
+    }
+
+    [Parameter]
+    public EventCallback<int> OnCreate { get; set; }
 
 
 }
